--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=simple-secrets-manager
+spring.application.name=simple-secrets-manager-app
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#swagger
+springdoc.api-docs.path=/openapi
+springdoc.swagger-ui.url=/openapi
+springdoc.swagger-ui.enabled=true
+
+#mongo
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=secrets_manager_db
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=root
+spring.data.mongodb.password=123456789
+
+server.port=8099
