--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.aklimets.pet</groupId>
+			<artifactId>cryptography</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
